--- a/excersice-01/style.css
+++ b/excersice-01/style.css
@@ -1,17 +1,21 @@
 main{
-    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
+
 #boxes{
     display: flex;
-    justify-content: center;
 }
 
 #boxes>div{
-    width: 170px;
+    width: 250px;
 }
 
 #boxes>div>img{
-    width: 170px;
+    width: 250px;
 }
 #boxes>div>div{
     position: relative;
@@ -19,5 +23,10 @@ main{
     right: 0;
     margin: auto;
     width: 50px;
+}
+
+#home-image{
+    width: 350px;
+    height: 230px;
 }
 
